--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
             </p>
             <table id="myTable" class="w3-table-all">
               <thead>
-                <tr class="w3-brown">
+                <tr class="w3-light-blue">
                   <th>Project</th>
                   <th>Course Name</th>
                   <th>Completed Date</th>
@@ -518,7 +518,6 @@
           <script src="src/js/sortable.js"></script>
 
         </div>
-        <hr />
 
         <!-- Dance Section -->
         <div class="w3-container w3-padding-64" id="dance">
@@ -848,24 +847,8 @@
                 </div>
               </blockquote>
               <script async src="//www.instagram.com/embed.js"></script>
-              <!-- <iframe
-                height="300"
-                src="https://www.youtube.com/embed/FDNNG9doFe4"
-                title="Basic Knife Skills"
-                frameborder="0"
-                allow="autoplay; encrypted-media"
-              >
-              </iframe> -->
             </div>
             <div class="w3-col m4 w3-center">
-              <!-- <iframe
-                height="300"
-                src="https://www.youtube.com/embed/G-Fg7l7G1zw"
-                title="Basic Knife Skills"
-                frameborder="0"
-                allow="autoplay; encrypted-media"
-              >
-              </iframe> -->
               <blockquote
                 class="instagram-media"
                 data-instgrm-permalink="https://www.instagram.com/reel/C98qhP9vDbY/?utm_source=ig_embed&amp;utm_campaign=loading"
@@ -1436,20 +1419,15 @@
           </div>
         </div>
 
-        <hr />
-
         <!-- accordion -->
-        <!-- step 1: add accordion button -->
-        <!-- step 2: add accordion content -->
-        <!-- step 3: add accorion javascrip -->
         <div class="w3-row">
           <div class="w3-col s6 w3-left" style="padding-right: 3px">
             <button
               onclick="myAccordion('accordion1')"
-              class="w3-button w3-block w3-brown w3-center-align"
+              class="w3-button w3-block w3-light-blue w3-center-align"
               id="accordionBtn1"
             >
-              <h4>Cuttery Tip 1 <i class="fa fa-caret-down"></i></h4>
+              <h4>Dance Tip 1 <i class="fa fa-caret-down"></i></h4>
             </button>
             <div
               id="accordion1"
@@ -1467,10 +1445,10 @@
           <div class="w3-col s6 w3-left" style="padding-left: 3px">
             <button
               onclick="myAccordion('accordion2')"
-              class="w3-button w3-block w3-brown w3-center-align"
+              class="w3-button w3-block w3-light-blue w3-center-align"
               id="accordionBtn1"
             >
-              <h4>Cuttery Tip 2 <i class="fa fa-caret-down"></i></h4>
+              <h4>Dance Tip 2 <i class="fa fa-caret-down"></i></h4>
             </button>
             <div
               id="accordion2"
