--- a/index.html
+++ b/index.html
@@ -1465,17 +1465,80 @@
           </div>
         </div>
       </div>
-      <!-- End page content -->
+
        <script src="src/js/accordion.js"></script>
       </div>
 
       <!-- Travel Section -->
       <div class="w3-container w3-padding-64" id="travel">
         <h1 class="w3-center">Travel</h1>
-        <br />
-        <p>Travel part</p>
+        <div class="w3-row-padding" style="margin: 15px 0px;">
+          <div class="w3-col m4">
+            <img 
+              src="src/img/snowboarding_01.jpeg"
+              style="width: 100%; cursor: zoom-in"
+              onclick="document.getElementById('mod01').style.display='block'"
+              class="w3-hover-shadow"/>
+          </div>
+          <div class="w3-col m4">
+            <img 
+              src="src/img/snowboarding_01.jpeg"
+              style="width: 100%; cursor: zoom-in"
+              onclick="document.getElementById('mod02').style.display='block'"
+              class="w3-hover-shadow"/>
+          </div>
+          <div class="w3-col m4">
+            <img 
+              src="src/img/snowboarding_01.jpeg"
+              style="width: 100%; cursor: zoom-in"
+              onclick="document.getElementById('mod03').style.display='block'"
+              class="w3-hover-shadow"/>
+          </div>
+        </div>
+        <!-- add modal -->
+        <div id="mod01" class="w3-modal" onclick="this.style.display='none'">
+          <!-- add close button -->
+          <!-- &times; is a representation of a close button -->
+          <span
+            class="w3-text-white w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
+            style="cursor: pointer"
+            >&times;</span
+          >
+          <!-- add modal background image -->
+          <div class="w3-modal-content w3-animate-zoom">
+            <h4 class="w3-center">modal1</h4>
+            <img src="src/img/snowboarding_01.jpeg" style="width: 100%" />
+          </div>
+        </div>
+        <div id="mod02" class="w3-modal" onclick="this.style.display='none'">
+          <!-- add close button -->
+          <!-- &times; is a representation of a close button -->
+          <span
+            class="w3-text-white w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
+            style="cursor: pointer"
+            >&times;</span
+          >
+          <!-- add modal background image -->
+          <div class="w3-modal-content w3-animate-zoom">
+            <h4 class="w3-center">modal2</h4>
+            <img src="src/img/snowboarding_01.jpeg" style="width: 100%" />
+          </div>
+        </div>
+        <div id="mod03" class="w3-modal" onclick="this.style.display='none'">
+          <!-- add close button -->
+          <!-- &times; is a representation of a close button -->
+          <span
+            class="w3-text-white w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
+            style="cursor: pointer"
+            >&times;</span
+          >
+          <!-- add modal background image -->
+          <div class="w3-modal-content w3-animate-zoom">
+            <h4 class="w3-center">modal3</h4>
+            <img src="src/img/snowboarding_01.jpeg" style="width: 100%" />
+          </div>
+        </div>
       </div>
-      <!-- End page content -->
     </div>
 
     <!-- Footer -->
