travel part 2 with photos

--- a/index.html
+++ b/index.html
@@ -1473,25 +1473,32 @@
       <div class="w3-container w3-padding-64" id="travel">
         <h1 class="w3-center">Travel</h1>
         <div class="w3-row-padding" style="margin: 15px 0px;">
-          <div class="w3-col m4">
+          <div class="w3-col m3">
             <img 
-              src="src/img/snowboarding_01.jpeg"
+              src="src/img/travel_01.jpeg"
               style="width: 100%; cursor: zoom-in"
               onclick="document.getElementById('mod01').style.display='block'"
               class="w3-hover-shadow"/>
           </div>
-          <div class="w3-col m4">
+          <div class="w3-col m3">
             <img 
-              src="src/img/snowboarding_01.jpeg"
+              src="src/img/travel_02.jpeg"
               style="width: 100%; cursor: zoom-in"
               onclick="document.getElementById('mod02').style.display='block'"
               class="w3-hover-shadow"/>
           </div>
-          <div class="w3-col m4">
+          <div class="w3-col m3">
             <img 
-              src="src/img/snowboarding_01.jpeg"
+              src="src/img/travel_03.jpeg"
               style="width: 100%; cursor: zoom-in"
               onclick="document.getElementById('mod03').style.display='block'"
+              class="w3-hover-shadow"/>
+          </div>
+          <div class="w3-col m3">
+            <img 
+              src="src/img/travel_04.jpeg"
+              style="width: 100%; cursor: zoom-in"
+              onclick="document.getElementById('mod04').style.display='block'"
               class="w3-hover-shadow"/>
           </div>
         </div>
@@ -1505,9 +1512,9 @@
             >&times;</span
           >
           <!-- add modal background image -->
-          <div class="w3-modal-content w3-animate-zoom">
-            <h4 class="w3-center">modal1</h4>
-            <img src="src/img/snowboarding_01.jpeg" style="width: 100%" />
+          <div class="w3-modal-content w3-animate-zoom" style="background-color: lightblue;">
+            <h4 class="w3-center">Mt Shasta</h4>
+            <img src="src/img/travel_01.jpeg" style="width: 100%" />
           </div>
         </div>
         <div id="mod02" class="w3-modal" onclick="this.style.display='none'">
@@ -1519,9 +1526,9 @@
             >&times;</span
           >
           <!-- add modal background image -->
-          <div class="w3-modal-content w3-animate-zoom">
-            <h4 class="w3-center">modal2</h4>
-            <img src="src/img/snowboarding_01.jpeg" style="width: 100%" />
+          <div class="w3-modal-content w3-animate-zoom" style="background-color: lightblue;">
+            <h4 class="w3-center">Tokyo, Japan</h4>
+            <img src="src/img/travel_02.jpeg" style="width: 100%" />
           </div>
         </div>
         <div id="mod03" class="w3-modal" onclick="this.style.display='none'">
@@ -1533,9 +1540,23 @@
             >&times;</span
           >
           <!-- add modal background image -->
-          <div class="w3-modal-content w3-animate-zoom">
-            <h4 class="w3-center">modal3</h4>
-            <img src="src/img/snowboarding_01.jpeg" style="width: 100%" />
+          <div class="w3-modal-content w3-animate-zoom" style="background-color: lightblue;">
+            <h4 class="w3-center">Twin Peak, San Francisco</h4>
+            <img src="src/img/travel_03.jpeg" style="width: 100%" />
+          </div>
+        </div>
+        <div id="mod04" class="w3-modal" onclick="this.style.display='none'">
+          <!-- add close button -->
+          <!-- &times; is a representation of a close button -->
+          <span
+            class="w3-text-white w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
+            style="cursor: pointer"
+            >&times;</span
+          >
+          <!-- add modal background image -->
+          <div class="w3-modal-content w3-animate-zoom" style="background-color: lightblue;">
+            <h4 class="w3-center">Tahoe, Nevada</h4>
+            <img src="src/img/travel_04.jpeg" style="width: 100%" />
           </div>
         </div>
       </div>
