add intro to first part

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
       }
 
       /* my css */
+      .my-img-size-0 {
+        max-width: 200px;
+      }
+
       .my-img-size-1 {
         max-width: 300px;
       }
@@ -173,42 +177,31 @@
         <div class="w3-row w3-padding-64" id="about">
           <h1 class="w3-center">Who is Liang？</h1>
           <div class="w3-padding-large">
-            <h2>Intro 1</h2>
+            <h2>My background</h2>
             <p class="w3-large">
               <!-- added float left and img size -->
               <img
-                src="./src/img/selfphoto.png"
-                class="w3-round w3-image my-float-left my-img-size-1"
-                alt="self img"
+                src="./src/img/selfphoto_headshot.png"
+                class="w3-round w3-image my-float-left my-img-size-2"
+                alt="selfphoto"
                 style="width: 100%"
               />
               <!-- style="width: 100%" -->
-              Place Holder for Content - [Vegetables play an important role in
-              human nutrition. Most are low in fat and calories but are bulky
-              and filling. They supply dietary fiber and are important sources
-              of essential vitamins, minerals, and trace elements. Particularly
-              important are the antioxidant vitamins A, C, and E. When
-              vegetables are included in the diet, there is found to be a
-              reduction in the incidence of cancer, stroke, cardiovascular
-              disease, and other chronic ailments. Research has shown that,
-              compared with individuals who eat less than three servings of
-              fruits and vegetables each day, those that eat more than five
-              servings have an approximately twenty percent lower risk of
-              developing coronary heart disease or stroke.]
+              I was born and raised in China, where I developed a strong foundation in mathematics and sciences, 
+              ultimately leading me to pursue higher education in the United States. 
+              Earning a master’s degree in Electrical and Electronics Engineering at UCLA was a pivotal moment in my life, 
+              as it not only honed my technical skills but also opened doors to the dynamic tech industry in Silicon Valley. 
+              After graduation, I embarked on a seven-year journey as a software engineer, working with some of the most innovative companies in the Bay Area, 
+              including Yahoo, Uber, and Opendoor. These experiences provided me with invaluable insights into the intersection of technology and human interaction, 
+              but as time went on, I found myself yearning for a more hands-on creative outlet. 
+             
             </p>
             <p class="w3-large">
-              Place Holder for Content - [Vegetables play an important role in
-              human nutrition. Most are low in fat and calories but are bulky
-              and filling. They supply dietary fiber and are important sources
-              of essential vitamins, minerals, and trace elements. Particularly
-              important are the antioxidant vitamins A, C, and E. When
-              vegetables are included in the diet, there is found to be a
-              reduction in the incidence of cancer, stroke, cardiovascular
-              disease, and other chronic ailments. Research has shown that,
-              compared with individuals who eat less than three servings of
-              fruits and vegetables each day, those that eat more than five
-              servings have an approximately twenty percent lower risk of
-              developing coronary heart disease or stroke.]
+              This desire led me to make a bold career shift in January 2022, 
+              when I decided to explore the field of interior design. 
+              Enrolling full-time in the Berkeley Extension Interior Design and Architecture Certificate Program 
+              has allowed me to blend my technical background with my passion for aesthetics and spatial design, 
+              paving the way for a new chapter in my professional life.
               <span
                 >Reference:
                 <a
@@ -221,33 +214,25 @@
             </p>
           </div>
           <div class="w3-padding-large">
-            <h2>Intro 2</h2>
+            <h2>What I like to do..........</h2>
             <p class="w3-large">
               <img
-                src="./src/img/selfphoto_headshot.png"
-                class="w3-round w3-image my-float-right my-img-size-2"
-                alt="various types of vegetables"
+                src="./src/img/selfphoto.png"
+                class="w3-round w3-image my-float-right my-img-size-0"
+                alt="selfphoto
                 style="width: 100%"
               />
-              Place Holder for Content - [Vegetables play an important role in
-              human nutrition. Most are low in fat and calories but are bulky
-              and filling. They supply dietary fiber and are important sources
-              of essential vitamins, minerals, and trace elements. Particularly
-              important are the antioxidant vitamins A, C, and E.]
+              In my free time, I am deeply passionate about snowboarding, dancing, and traveling. 
+              I've had the thrill of snowboarding in six different countries, with Asahidake Ski Resort in Hokkaido, Japan, being my favorite destination so far. 
+              This year, I began focusing on park snowboarding, attending several camps at Mt. Hood, renowned for its exceptional summer park experience. 
+              My love for dance is equally strong; I enjoy jazz funk, a bit of hip-hop, and occasionally cover popular K-pop dances.
             </p>
             <p class="w3-large">
-              Place Holder for Content - [Vegetables play an important role in
-              human nutrition. Most are low in fat and calories but are bulky
-              and filling. They supply dietary fiber and are important sources
-              of essential vitamins, minerals, and trace elements. Particularly
-              important are the antioxidant vitamins A, C, and E. When
-              vegetables are included in the diet, there is found to be a
-              reduction in the incidence of cancer, stroke, cardiovascular
-              disease, and other chronic ailments. Research has shown that,
-              compared with individuals who eat less than three servings of
-              fruits and vegetables each day, those that eat more than five
-              servings have an approximately twenty percent lower risk of
-              developing coronary heart disease or stroke.]
+              When it comes to traveling, I find joy in exploring both vibrant urban landscapes and serene natural settings. 
+              I’ve visited iconic cities like New York, Seoul, and Tokyo, each offering a unique cultural experience. 
+              On the flip side, I also appreciate the beauty of nature, having hiked the challenging Half Dome in Yosemite, 
+              traversed the narrow paths of Angel’s Landing in Utah, and even tried my hand at mountaineering on Mt. Shasta. 
+              These activities provide me with a balanced mix of adventure, creativity, and relaxation, enriching my life beyond my professional pursuits.
               <span
                 >Reference:
                 <a
@@ -1743,6 +1728,7 @@
       <a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest-p w3-hover-opacity"></i></a>
       <a href="https://www.x.com/" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
       <a href="https://www.linkedin.com/in/liangjingoforit//" target="_blank"> <i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <p class="w3-small"><p>Contact: liangjin.goforit@yahoo.com</p>
       <p class="w3-small"><p>Copy Right Reserved @ 2024</p>
     </footer>
   </body>
