--- a/index.html
+++ b/index.html
@@ -1728,8 +1728,17 @@
       <a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest-p w3-hover-opacity"></i></a>
       <a href="https://www.x.com/" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
       <a href="https://www.linkedin.com/in/liangjingoforit//" target="_blank"> <i class="fa fa-linkedin w3-hover-opacity"></i></a>
-      <p class="w3-small"><p>Contact: liangjin.goforit@yahoo.com</p>
-      <p class="w3-small"><p>Copy Right Reserved @ 2024</p>
+      <div>
+        <a href="#home" target="_blank" class="w3-hover-opacity w3-small w3-text-black" style="padding-right: 20px">Privacy Policy</a>
+        <a href="#home" target="_blank" class="w3-hover-opacity w3-small w3-text-black" style="padding-right: 20px">Terms of User</a>
+        <a href="#home" target="_blank" class="w3-hover-opacity w3-small w3-text-black" style="padding-right: 20px">Accessibility</a>
+      </div>
+      <div>
+        <a href="#home" target="_blank" class="w3-hover-opacity w3-small w3-text-black" style="padding-right: 20px">1-123-456-7890</a>
+        <a href="#home" target="_blank" class="w3-hover-opacity w3-small w3-text-black" style="padding-right: 20px">liangjin.goforit@yahoo.com</a>
+      </div>
+      <p class="fa fa-copyright w3-small">All Rights Reserved 2024</p>
+      <!-- <p class="w3-small">Copy Right Reserved @ 2024</p> -->
     </footer>
   </body>
 </html>
