update links on about page

--- a/index.html
+++ b/index.html
@@ -206,12 +206,12 @@
             with my passion for aesthetics and spatial design, paving the way
             for a new chapter in my professional life.
             <span
-              >Reference:
+              >Linkedin:
               <a
-                href="https://en.wikipedia.org/wiki/Vegetable"
+                href="https://www.linkedin.com/in/liangjingoforit/"
                 target="_blank"
                 class="w3-hover-opacity"
-                >https://en.wikipedia.org/wiki/Vegetable</a
+                >Liang Jin</a
               ></span
             >
           </p>
@@ -241,12 +241,12 @@
             provide me with a balanced mix of adventure, creativity, and
             relaxation, enriching my life beyond my professional pursuits.
             <span
-              >Reference:
+              >Instagram:
               <a
-                href="https://en.wikipedia.org/wiki/Fruit"
+                href="https://www.instagram.com/j_j_liang/"
                 target="_blank"
                 class="w3-hover-opacity"
-                >https://en.wikipedia.org/wiki/Fruit</a
+                >j_j_liang</a
               ></span
             >
           </p>
