update the design section

--- a/index.html
+++ b/index.html
@@ -461,17 +461,35 @@
 
       <!-- Design Section -->
       <div class="w3-container w3-padding-64" id="design">
-        <h1 class="w3-center">Design</h1>
+        <h1 class="w3-center">Interior Design</h1>
         <!-- add sortable table -->
         <!-- step 1: create a table with 4 columns -->
         <!-- step 2: add javascrip and jquery to make the table sortable -->
         <div class="w3-padding-large">
-          <p>
-            We offer full-service catering for any event, large or small. We
-            understand your needs and we will cater the food to satisfy the
-            biggerst criteria of them all, both look and taste. Do not hesitate
-            to contact us.
-          </p>
+          <div class="w3-padding w3-center-align">
+            <p>
+              My journey into interior design has been both rewarding and
+              transformative. After several years in the tech industry, I
+              decided to pursue my passion by enrolling in the Berkeley
+              Extension Interior Design and Architecture Certificate Program.
+              This marked a significant career shift, blending my technical
+              skills with a newfound love for design. So far, I’ve completed
+              Phase I and Phase II, taking 19 courses that cover everything from
+              foundational principles to advanced techniques in space planning
+              and color theory. These experiences have provided me with a solid
+              design foundation and hands-on project experience.
+            </p>
+            <p>
+              Currently, I’m progressing through Phase III, where I’m honing my
+              skills in more complex and specialized aspects of interior design.
+              I’m on track to complete the program by the end of Spring 2025,
+              and I’m excited about the opportunities ahead. In the following
+              section, I’ve shared some of the classes I’ve taken so far,
+              highlighting the diverse curriculum that has shaped my growth as
+              an aspiring interior designer.
+            </p>
+          </div>
+
           <table id="myTable" class="w3-table-all">
             <thead>
               <tr class="w3-light-blue">
@@ -484,37 +502,105 @@
             </thead>
             <tr class="w3-hover-sand">
               <td>
-                <img src="./img/skillet-03.jpeg" style="width: 120px" />
+                <img
+                  src="./src/img/design_elements.jpeg"
+                  style="width: 150px"
+                />
               </td>
-              <td>Course Name</td>
-              <td>05/2024</td>
+              <td>Design Principles and Elementes</td>
+              <td>2022/08</td>
               <td>A</td>
-              <td>Description of the class....</td>
+              <td>
+                Understand people’s relationship to space, architecture and the
+                environment in this introductory, conceptual design course.
+              </td>
             </tr>
             <tr class="w3-hover-sand">
               <td>
-                <img src="./img/wooden-spoons-01.jpeg" style="width: 120px" />
+                <img src="./src/img/design_history.jpeg" style="width: 150px" />
               </td>
-              <td>Course Name</td>
-              <td>05/2024</td>
-              <td>A</td>
-              <td>Description of the class....</td>
-            </tr>
-            <tr class="w3-hover-sand">
-              <td><img src="./img/reamer-01.jpeg" style="width: 120px" /></td>
-              <td>Course Name</td>
-              <td>12/2023</td>
-              <td>A</td>
-              <td>Test - Description of the class....</td>
+              <td>History of Architecture, Interiors and Decorative Arts II</td>
+              <td>2023/05</td>
+              <td>A+</td>
+              <td>
+                Learn about Victorian revival style, the emergence of Arts and
+                Crafts, and the Modern and Contemporary movements.
+              </td>
             </tr>
             <tr class="w3-hover-sand">
               <td>
-                <img src="./img/stand-mixer-01.jpeg" style="width: 120px" />
+                <img
+                  src="./src/img/design_interior_material.jpeg"
+                  style="width: 150px"
+                />
               </td>
-              <td>Course Name</td>
-              <td>05/2024</td>
+              <td>Interior Finishes and Materials</td>
+              <td>2023/08</td>
               <td>A</td>
-              <td>Description of the class....</td>
+              <td>
+                Learn how to use finishes and materials appropriately for
+                interior applications and addition to construction
+                documentation.
+              </td>
+            </tr>
+            <tr class="w3-hover-sand">
+              <td>
+                <img
+                  src="./src/img/design_presentationguide.jpeg"
+                  style="width: 150px"
+                />
+              </td>
+              <td>Digital Presentation Techniques</td>
+              <td>2023/08</td>
+              <td>A</td>
+              <td>
+                Gain the skills to create effective concept and design drawings
+                using 2-D and 3-D software.
+              </td>
+            </tr>
+            <tr class="w3-hover-sand">
+              <td>
+                <img src="./src/img/design_studioI.jpeg" style="width: 150px" />
+              </td>
+              <td>Design Studio I</td>
+              <td>2023/08</td>
+              <td>B+</td>
+              <td>
+                A series of design explorations that require you to think
+                conceptually; frame an argument; materialize ideas; and clearly
+                articulate your design intent.
+              </td>
+            </tr>
+            <tr class="w3-hover-sand">
+              <td>
+                <img
+                  src="./src/img/design_spaceplanning.jpeg"
+                  style="width: 150px"
+                />
+              </td>
+              <td>Space Planning</td>
+              <td>2023/12</td>
+              <td>A+</td>
+              <td>
+                Develop plans that satisfy programmatic needs and use space
+                efficiently.
+              </td>
+            </tr>
+            <tr class="w3-hover-sand">
+              <td>
+                <img
+                  src="./src/img/design_studioII.jpeg"
+                  style="width: 150px"
+                />
+              </td>
+              <td>Design Studio II</td>
+              <td>2024/05</td>
+              <td>A</td>
+              <td>
+                Conceptualize and design a residential project. Under direction,
+                analyze spaces and refine layouts to satisfy functional
+                requirements.
+              </td>
             </tr>
           </table>
         </div>
