add a logo, and update home image

--- a/index.html
+++ b/index.html
@@ -94,7 +94,15 @@
           ></a>
         </div>
 
-        <a href="#home" class="w3-bar-item w3-button">Liang</a>
+        <a href="#home" class="w3-bar-item w3-button">
+          <img
+            class="w3-image"
+            src="./src/img/logo_liang.png"
+            alt="logo"
+            width="30"
+          />
+          iang
+        </a>
         <!-- Right-sided navbar links. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
           <a href="#about" class="w3-bar-item w3-button">About</a>
@@ -155,12 +163,14 @@
     >
       <img
         class="w3-image"
-        src="./src/img/homepage_img.png"
+        src="./src/img/homepage.jpeg"
         alt="Header image"
         width="1600"
         height="800"
       />
-      <div class="w3-display-bottomleft w3-padding-large w3-opacity">
+      <div
+        class="w3-display-bottomleft w3-padding-large w3-opacity w3-text-white"
+      >
         <h1 class="w3-xxlarge">My Personal Blog</h1>
       </div>
     </header>
