some small changes

--- a/index.html
+++ b/index.html
@@ -480,9 +480,17 @@
             <p>
               My journey into interior design has been both rewarding and
               transformative. After several years in the tech industry, I
-              decided to pursue my passion by enrolling in the Berkeley
-              Extension Interior Design and Architecture Certificate Program.
-              This marked a significant career shift, blending my technical
+              decided to pursue my passion by enrolling in the
+              <span
+                >Instagram:
+                <a
+                  href="https://extension.berkeley.edu/public/category/courseCategoryCertificateProfile.do?method=load&certificateId=17017&selectedProgramAreaId=11461&selectedProgramStreamId=15552/"
+                  target="_blank"
+                  class="w3-hover-opacity"
+                  >Berkeley Extension Interior Design and Architecture
+                  Certificate Program</a
+                ></span
+              >. This marked a significant career shift, blending my technical
               skills with a newfound love for design. So far, I’ve completed
               Phase I and Phase II, taking 19 courses that cover everything from
               foundational principles to advanced techniques in space planning
@@ -730,87 +738,85 @@
             <script async src="//www.instagram.com/embed.js"></script>
           </div>
         </div>
-      </div>
-
-      <div class="w3-padding w3-center-align">
-        <p>
-          Dancing has always been a vibrant and essential part of my life,
-          offering a unique way to express myself and connect with others.
-          Whether it's the energetic moves of jazz funk, the rhythmic flow of
-          hip-hop, or the intricate choreography of K-pop, each dance style
-          allows me to explore different facets of creativity and movement.
-        </p>
-        <p>
-          Dance not only keeps me physically active but also serves as a
-          powerful outlet for emotion and storytelling. The sense of community
-          and shared passion I find in dance classes and performances is
-          something I deeply cherish. Over the years, I’ve developed a strong
-          appreciation for the discipline and artistry that dance requires, and
-          it continues to inspire me in all areas of my life. From my
-          experiences, I’ve gathered a few insights that have helped me grow as
-          a dancer and could be valuable for anyone looking to improve their
-          skills or simply enjoy the art of dance:
-        </p>
-      </div>
-      <!-- accordion -->
-      <div class="w3-row">
-        <div
-          class="w3-col m6 w3-left"
-          style="padding-right: 3px; padding-left: 3px"
-        >
-          <button
-            onclick="myAccordion('accordion1')"
-            class="w3-button w3-block w3-light-blue w3-center-align"
-            id="accordionBtn1"
-          >
-            <h4>Focus on Musicality <i class="fa fa-caret-down"></i></h4>
-          </button>
+        <div class="w3-padding w3-center-align">
+          <p>
+            Dancing has always been a vibrant and essential part of my life,
+            offering a unique way to express myself and connect with others.
+            Whether it's the energetic moves of jazz funk, the rhythmic flow of
+            hip-hop, or the intricate choreography of K-pop, each dance style
+            allows me to explore different facets of creativity and movement.
+          </p>
+          <p>
+            Dance not only keeps me physically active but also serves as a
+            powerful outlet for emotion and storytelling. The sense of community
+            and shared passion I find in dance classes and performances is
+            something I deeply cherish. Over the years, I’ve developed a strong
+            appreciation for the discipline and artistry that dance requires,
+            and it continues to inspire me in all areas of my life. From my
+            experiences, I’ve gathered a few insights that have helped me grow
+            as a dancer and could be valuable for anyone looking to improve
+            their skills or simply enjoy the art of dance:
+          </p>
+        </div>
+        <!-- accordion -->
+        <div class="w3-row">
           <div
-            id="accordion1"
-            class="w3-hide w3-container"
-            style="height: 260px"
+            class="w3-col m6 w3-left"
+            style="padding-right: 3px; padding-left: 3px"
           >
-            <p>
-              Musicality is key to elevating your dance performance. It’s not
-              just about hitting the beats but also about feeling the music and
-              interpreting it through your movements. Practice listening to
-              different genres and rhythms, and experiment with how your body
-              responds to them. By understanding the nuances of the music, you
-              can add more expression and emotion to your dance, making your
-              performance more engaging and dynamic.
-            </p>
+            <button
+              onclick="myAccordion('accordion1')"
+              class="w3-button w3-block w3-light-blue w3-center-align"
+              id="accordionBtn1"
+            >
+              <h4>Focus on Musicality <i class="fa fa-caret-down"></i></h4>
+            </button>
+            <div
+              id="accordion1"
+              class="w3-hide w3-container"
+              style="height: 260px"
+            >
+              <p>
+                Musicality is key to elevating your dance performance. It’s not
+                just about hitting the beats but also about feeling the music
+                and interpreting it through your movements. Practice listening
+                to different genres and rhythms, and experiment with how your
+                body responds to them. By understanding the nuances of the
+                music, you can add more expression and emotion to your dance,
+                making your performance more engaging and dynamic.
+              </p>
+            </div>
+          </div>
+          <div
+            class="w3-col m6 w3-left"
+            style="padding-right: 3px; padding-left: 3px"
+          >
+            <button
+              onclick="myAccordion('accordion2')"
+              class="w3-button w3-block w3-light-blue w3-center-align"
+              id="accordionBtn1"
+            >
+              <h4>Embrace Mistakes <i class="fa fa-caret-down"></i></h4>
+            </button>
+            <div
+              id="accordion2"
+              class="w3-hide w3-container"
+              style="height: 260px"
+            >
+              <p>
+                Dance is as much about exploration as it is about technique.
+                Don’t be afraid to make mistakes or try something new, whether
+                it’s a challenging move or a different style. Mistakes are an
+                essential part of the learning process, helping you discover
+                what works best for you and how you can improve. Embrace the
+                imperfections, learn from them, and use them as stepping stones
+                to refine your skills and develop your unique style.
+              </p>
+            </div>
           </div>
         </div>
-        <div
-          class="w3-col m6 w3-left"
-          style="padding-right: 3px; padding-left: 3px"
-        >
-          <button
-            onclick="myAccordion('accordion2')"
-            class="w3-button w3-block w3-light-blue w3-center-align"
-            id="accordionBtn1"
-          >
-            <h4>Embrace Mistakes <i class="fa fa-caret-down"></i></h4>
-          </button>
-          <div
-            id="accordion2"
-            class="w3-hide w3-container"
-            style="height: 260px"
-          >
-            <p>
-              Dance is as much about exploration as it is about technique. Don’t
-              be afraid to make mistakes or try something new, whether it’s a
-              challenging move or a different style. Mistakes are an essential
-              part of the learning process, helping you discover what works best
-              for you and how you can improve. Embrace the imperfections, learn
-              from them, and use them as stepping stones to refine your skills
-              and develop your unique style.
-            </p>
-          </div>
-        </div>
+        <script src="src/js/accordion.js"></script>
       </div>
-
-      <script src="src/js/accordion.js"></script>
       <hr />
 
       <!-- Travel Section -->
