--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
         <div class="w3-row">
           <div
             class="w3-col m6 w3-left"
-            style="padding-right: 3px; padding-left: 3px"
+            style="padding-right: 3px; padding-left: 3px; padding-bottom: 3px"
           >
             <button
               onclick="myAccordion('accordion1')"
