--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <div class="about-container"></div> -->
 
       <!-- About Section -->
-      <div class="w3-row w3-padding-64" id="about">
+      <div class="w3-row w3-padding-top-64" id="about">
         <h1 class="w3-center">Who is Liang？</h1>
         <div class="w3-padding-large">
           <h2>My background.........</h2>
@@ -265,7 +265,7 @@
       <hr />
 
       <!-- Snowboarding Section -->
-      <div class="w3-row w3-padding-64" id="snowboarding">
+      <div class="w3-row w3-padding-top-64" id="snowboarding">
         <h1 class="w3-center">Snowboarding</h1>
 
         <div class="w3-padding-large">
@@ -470,7 +470,7 @@
       <hr />
 
       <!-- Design Section -->
-      <div class="w3-container w3-padding-64" id="design">
+      <div class="w3-container w3-padding-top-64" id="design">
         <h1 class="w3-center">Interior Design</h1>
         <!-- add sortable table -->
         <!-- step 1: create a table with 4 columns -->
@@ -627,7 +627,7 @@
       <hr />
 
       <!-- Dance Section -->
-      <div class="w3-container w3-padding-64" id="dance">
+      <div class="w3-container w3-padding-top-64" id="dance">
         <h1 class="w3-center">Dance</h1>
         <br />
 
@@ -820,7 +820,7 @@
       <hr />
 
       <!-- Travel Section -->
-      <div class="w3-container w3-padding-64" id="travel">
+      <div class="w3-container w3-padding-top-64" id="travel">
         <h1 class="w3-center">Travel</h1>
         <div class="w3-row" style="margin: 15px 0px">
           <div class="w3-third">
@@ -1136,7 +1136,7 @@
 
     <!-- Footer -->
     <footer
-      class="w3-container w3-padding-32 w3-light-grey w3-center w3-opacity w3-xlarge"
+      class="w3-container w3-padding-top-32 w3-light-grey w3-center w3-opacity w3-xlarge"
       style="margin-top: 64px"
     >
       <a href="#home" class="w3-button w3-light-blue">
